--- a/feed.html
+++ b/feed.html
@@ -51,6 +51,13 @@
                 <i class="fas fa-users"></i>
                 <span>Data Anggota</span>
             </a>
+            <div class="menu-section">
+                <span>Pengaturan</span>
+            </div>
+            <a href="#" class="menu-item">
+                <i class="fas fa-cog"></i>
+                <span>Pengaturan Website</span>
+            </a>
             <a href="index.html" class="menu-item logout">
                 <i class="fas fa-sign-out-alt"></i>
                 <span>Keluar</span>
@@ -64,7 +71,7 @@
         <header class="admin-header">
             <div class="header-left">
                 <h1>Kelola Feed & Berita</h1>
-                <p>Posting berita dan update kegiatan XTM1</p>
+                <p>Kelola postingan dan berita kelas XTM1</p>
             </div>
             <div class="header-right">
                 <button class="btn-primary" id="tambahFeedBtn">
@@ -94,19 +101,20 @@
 
             <!-- Feed Grid -->
             <div class="feed-grid" id="feedGrid">
-                <!-- Feed cards akan di-load di sini -->
+                <!-- Feed cards will be loaded here -->
                 <div class="feed-card">
                     <div class="feed-image">
-                        <img src="https://via.placeholder.com/400x200?text=Projek+Robot" alt="Projek Robot">
-                        <div class="feed-status published">Published</div>
+                        <img src="https://via.placeholder.com/400x200?text=Sample+Feed" alt="Sample Feed">
                     </div>
                     <div class="feed-content">
-                        <h3 class="feed-title">Projek Robot Pemilah Barang Berhasil!</h3>
-                        <p class="feed-excerpt">Tim XTM1 berhasil menyelesaikan projek robot pemilah barang otomatis dengan menggunakan sensor warna dan mikrokontroler Arduino.</p>
+                        <div class="feed-header">
+                            <h3 class="feed-title">Projek Robot Berhasil Diselesaikan!</h3>
+                            <span class="feed-status published">Published</span>
+                        </div>
+                        <p class="feed-excerpt">Hari ini kita berhasil menyelesaikan projek robot pemilah barang. Kerja bagus semuanya!</p>
                         <div class="feed-meta">
-                            <span class="feed-author"><i class="fas fa-user"></i> Admin XTM1</span>
-                            <span class="feed-date"><i class="fas fa-calendar"></i> 15 Jan 2024</span>
-                            <span class="feed-views"><i class="fas fa-eye"></i> 156</span>
+                            <span class="feed-date"><i class="far fa-calendar"></i> 15 Jan 2024</span>
+                            <span class="feed-author"><i class="far fa-user"></i> Admin XTM1</span>
                         </div>
                     </div>
                     <div class="feed-actions">
@@ -117,7 +125,7 @@
                             <i class="fas fa-trash"></i>
                         </button>
                         <button class="btn-preview" title="Preview">
-                            <i class="fas fa-external-link-alt"></i>
+                            <i class="fas fa-eye"></i>
                         </button>
                     </div>
                 </div>
@@ -127,7 +135,7 @@
             <div class="empty-state" id="emptyFeed" style="display: none;">
                 <i class="fas fa-newspaper"></i>
                 <h3>Belum Ada Feed</h3>
-                <p>Mulai dengan membuat postingan feed pertama Anda</p>
+                <p>Mulai dengan membuat postingan feed pertama</p>
                 <button class="btn-primary" id="addFirstFeed">
                     <i class="fas fa-plus"></i>
                     Buat Feed Pertama
@@ -149,25 +157,19 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="inputJudul">Judul Feed</label>
-                        <input type="text" id="inputJudul" name="judul" required placeholder="Masukkan judul yang menarik...">
+                        <input type="text" id="inputJudul" name="judul" required placeholder="Masukkan judul feed...">
                     </div>
 
                     <div class="form-group">
                         <label for="inputKonten">Konten</label>
-                        <textarea id="inputKonten" name="konten" rows="8" required placeholder="Tulis konten feed di sini..."></textarea>
+                        <textarea id="inputKonten" name="konten" rows="6" required placeholder="Tulis konten feed di sini..."></textarea>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="inputGambar">Gambar Thumbnail</label>
-                            <div class="file-upload">
-                                <input type="file" id="inputGambar" name="gambar" accept="image/*">
-                                <label for="inputGambar" class="file-upload-label">
-                                    <i class="fas fa-upload"></i>
-                                    <span>Pilih Gambar</span>
-                                </label>
-                                <div class="file-preview" id="filePreview"></div>
-                            </div>
+                            <label for="inputGambar">Gambar</label>
+                            <input type="file" id="inputGambar" name="gambar" accept="image/*">
+                            <small class="form-help">Format: JPG, PNG, GIF (Maks. 2MB)</small>
                         </div>
                         <div class="form-group">
                             <label for="inputStatus">Status</label>
@@ -176,6 +178,13 @@
                                 <option value="draft">Draft</option>
                             </select>
                         </div>
+                    </div>
+
+                    <div class="image-preview" id="imagePreview" style="display: none;">
+                        <img id="previewImage" src="" alt="Preview">
+                        <button type="button" id="removeImage" class="btn-remove">
+                            <i class="fas fa-times"></i>
+                        </button>
                     </div>
                 </div>
                 <div class="modal-footer">
